# causal-inference-platform

./: LICENSE  README.md  main.py  pyproject.toml
app/: Home.py
app/pages/: 01_Power_Analysis.py  02_Bayesian_AB_Test.py  03_Sequential_Test.py
causal_inference_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
core/: power_analysis.py
core/bayesian/: beta_binomial.py
core/frequentist/: two_sample_tests.py
core/sequential/: msprt.py
tests/: test_power_analysis.py
tests/bayesian/: test_beta_binomial.py
tests/frequentist/: test_two_sample_tests.py
tests/sequential/: test_msprt.py
